feat: track order page, admin order redesign, terms banner, password UI, status emails
- Created track.html + track.js for public order tracking (by order# or email)
- Fixed admin order stats bug (HTML ID mismatch with JS selectors)
- Redesigned admin order modal: status bar, timeline, 3-col layout, action buttons
- Auto-set order status to 'processing' when payment is confirmed (checkout.js)
- Added logo to dashboard overview section
- Redesigned dashboard order tracking: vertical timeline with pulse animation
- Added terms/cookie acceptance banner (app.js) with localStorage persistence
- Added password requirements UI: real-time validation, strength bar (auth.js)
- Updated edge function to handle status change emails (processing/shipped/delivered/cancelled)
- Added status change trigger SQL (notify_order_status_change)
- Added Track Order link to footer on all pages
- Updated sw.js cache to v3, added track.html + track.js

--- a/admin.html
+++ b/admin.html
@@ -299,6 +299,7 @@
           <button
             type="button"
             class="modal-close"
+            id="closeOrderModal"
             data-close-order
             aria-label="Close"
           >
@@ -308,21 +309,8 @@
         <div class="modal-body" id="orderModalBody">
           <!-- Order details populated via JS -->
         </div>
-        <div class="modal-footer">
-          <select class="form-select" id="orderStatusSelect">
-            <option value="pending">Pending</option>
-            <option value="processing">Processing</option>
-            <option value="shipped">Shipped</option>
-            <option value="delivered">Delivered</option>
-            <option value="cancelled">Cancelled</option>
-          </select>
-          <button
-            class="btn btn-primary"
-            id="updateOrderStatusBtn"
-            type="button"
-          >
-            Update Status
-          </button>
+        <div class="modal-footer order-modal-footer" id="orderModalFooter">
+          <!-- Status actions populated dynamically -->
         </div>
       </div>
     </div>
@@ -994,7 +982,7 @@
                   <i class="fa-solid fa-clock"></i>
                 </div>
                 <div class="order-stat-info">
-                  <span class="stat-value" id="ordersPendingCount">0</span>
+                  <span class="stat-value" id="pendingOrdersCount">0</span>
                   <span class="stat-label">Pending</span>
                 </div>
               </div>
@@ -1003,7 +991,7 @@
                   <i class="fa-solid fa-gear"></i>
                 </div>
                 <div class="order-stat-info">
-                  <span class="stat-value" id="ordersProcessingCount">0</span>
+                  <span class="stat-value" id="processingOrdersCount">0</span>
                   <span class="stat-label">Processing</span>
                 </div>
               </div>
@@ -1012,7 +1000,7 @@
                   <i class="fa-solid fa-truck"></i>
                 </div>
                 <div class="order-stat-info">
-                  <span class="stat-value" id="ordersShippedCount">0</span>
+                  <span class="stat-value" id="shippedOrdersCount">0</span>
                   <span class="stat-label">Shipped</span>
                 </div>
               </div>
@@ -1021,7 +1009,7 @@
                   <i class="fa-solid fa-check-circle"></i>
                 </div>
                 <div class="order-stat-info">
-                  <span class="stat-value" id="ordersDeliveredCount">0</span>
+                  <span class="stat-value" id="deliveredOrdersCount">0</span>
                   <span class="stat-label">Delivered</span>
                 </div>
               </div>
