--- a/dashboard.html
+++ b/dashboard.html
@@ -304,6 +304,14 @@
 
         <!-- ── OVERVIEW ────────────────────────────────────── -->
         <section class="dash-panel active" id="section-overview">
+          <!-- Brand Mark -->
+          <div class="dash-brand-mark">
+            <a href="index.html" class="logo">
+              <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
+              <span class="logo-text">Lingerie by Sisioyin</span>
+            </a>
+          </div>
+
           <!-- Stat Cards -->
           <div class="dash-stats">
             <div class="dash-stat" data-accent="blue">
@@ -559,6 +567,7 @@
             <h4 class="footer-title">Help</h4>
             <nav class="footer-links">
               <a href="dashboard.html">My Account</a>
+              <a href="track.html">Track Order</a>
               <a href="faq.html">FAQs</a>
               <a href="size.html">Size Guide</a>
               <a href="contact.html">Contact Us</a>
