--- a/faq.html
+++ b/faq.html
@@ -847,6 +847,7 @@
             <h4 class="footer-title">Help</h4>
             <nav class="footer-links">
               <a href="dashboard.html">My Account</a>
+              <a href="track.html">Track Order</a>
               <a href="faq.html">FAQs</a>
               <a href="size.html">Size Guide</a>
               <a href="contact.html">Contact Us</a>
