fix: 28-point UI overhaul — auth modal redesign, address suggestions, pretty URLs, and 25+ bug fixes
Bugs fixed:
- #1: wishlist.js syntax error (duplicate closing braces)
- #2: mobile nav user initials shrinking (min-width)
- #3: category card text not visible in light mode (gradient overlay)
- #4: page-header hero text invisible in light mode (bg + border)
- #5: modal size/color buttons not visible + mobile close button
- #6: size chart not responsive on mobile (overflow + min-width)
- #7: FAQ tab excessive padding
- #8: dashboard overview tab missing icon (fa-grid-2 -> fa-chart-pie)
- #9: order status not clickable + track-modal light mode colors
- #10-12: dropdown arrows, form spacing, gender select height
- #14: admin pending order stat not reading (duplicate HTML ID)
- #17: tracking page running under header (offset fix)
- #18: admin welcome using real name (metadata fallback)
- #19: studio form-row mobile spacing
- #27: cart drawer now goes to cart.html first

Redesigns:
- #13: address modal with city/state suggestions + saved addresses in checkout
- #15: order action buttons with gradient styles per status
- #16: analytics page cleaner card design
- #20: admin auth reduced spacing
- #21: cookie consent as full overlay modal (Accept All / Essential Only)
- #22: password requirements collapsible with strength bar
- #23: unified dropdown arrows with SVG chevron (site + admin)
- #24: auth modal redesigned — gradient hero, tab indicator, icon inputs, Google SVG
- #28: mobile responsive fixes across all pages

Features:
- #25: status change email trigger SQL ready (needs Supabase deployment)
- #26: pretty URLs via Vercel cleanUrls + admin rewrite

Infrastructure:
- sw.js cache bumped to v4
- Auth modal updated across all 12 HTML pages

--- a/admin.html
+++ b/admin.html
@@ -839,7 +839,7 @@
                 <i class="fa-solid fa-clock"></i>
               </div>
               <div class="stat-card-info">
-                <span class="stat-card-value" id="pendingOrdersCount">0</span>
+                <span class="stat-card-value" id="dashPendingCount">0</span>
                 <span class="stat-card-label">Pending Orders</span>
               </div>
             </div>
