--- a/track.html
+++ b/track.html
@@ -54,17 +54,38 @@
         </nav>
 
         <div class="header-actions">
-          <button type="button" class="header-btn" id="searchToggle" aria-label="Search">
+          <button
+            type="button"
+            class="header-btn"
+            id="searchToggle"
+            aria-label="Search"
+          >
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
-          <button type="button" class="header-btn" id="loginBtn" aria-label="Sign in">
+          <button
+            type="button"
+            class="header-btn"
+            id="loginBtn"
+            aria-label="Sign in"
+          >
             <i class="fa-solid fa-user"></i>
           </button>
-          <button type="button" class="header-btn" id="cartToggle" data-cart-drawer aria-label="Shopping cart">
+          <button
+            type="button"
+            class="header-btn"
+            id="cartToggle"
+            data-cart-drawer
+            aria-label="Shopping cart"
+          >
             <i class="fa-solid fa-bag-shopping"></i>
             <span class="badge" data-cart-count>0</span>
           </button>
-          <button type="button" class="header-btn menu-toggle" id="mobileToggle" aria-label="Menu">
+          <button
+            type="button"
+            class="header-btn menu-toggle"
+            id="mobileToggle"
+            aria-label="Menu"
+          >
             <i class="fa-solid fa-bars"></i>
           </button>
         </div>
@@ -76,7 +97,9 @@
       <div class="track-page">
         <div class="track-page-header">
           <h1>Track Your Order</h1>
-          <p>Enter your order number or email address to view your order status</p>
+          <p>
+            Enter your order number or email address to view your order status
+          </p>
         </div>
 
         <div class="track-search-card">
@@ -106,11 +129,20 @@
       <div class="container">
         <div class="footer-grid">
           <div class="footer-brand">
-            <a href="index.html" class="logo" style="margin-bottom: var(--space-4)">
+            <a
+              href="index.html"
+              class="logo"
+              style="margin-bottom: var(--space-4)"
+            >
               <span class="logo-icon"><i class="fa-solid fa-heart"></i></span>
-              <span class="logo-text" style="display: inline">Lingerie by Sisioyin</span>
+              <span class="logo-text" style="display: inline"
+                >Lingerie by Sisioyin</span
+              >
             </a>
-            <p>Luxe essentials defined by comfort and confidence. Premium lingerie and loungewear for the modern woman.</p>
+            <p>
+              Luxe essentials defined by comfort and confidence. Premium
+              lingerie and loungewear for the modern woman.
+            </p>
           </div>
           <div>
             <h4 class="footer-title">Shop</h4>
@@ -141,14 +173,18 @@
         </div>
         <div class="footer-bottom">
           <p class="footer-copyright">
-            &copy; <span id="currentYear">2026</span> Lingerie by Sisioyin. All rights reserved.
+            &copy; <span id="currentYear">2026</span> Lingerie by Sisioyin. All
+            rights reserved.
           </p>
         </div>
       </div>
     </footer>
 
     <!-- Scripts -->
-    <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"
+    ></script>
     <script defer src="assets/js/config.js"></script>
     <script defer src="assets/js/utils.js"></script>
     <script defer src="assets/js/supabase.js"></script>
